2012-03-26 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Fix interactive mode gather/standard toggle error, when
	using special character '=' (ticket #171).

2012-03-24 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clubak.py: Add --interpret-keys=never,always,auto option to clubak
	to allow a more generic usage of clubak, ie. even in cases where keys are
	not nodeset compliant (ticket #180).

2012-03-21 S. Thiell <stephane.thiell@cea.fr>

	* conf/groups.conf: Fix group cross reference issue (ticket #183), we now
	use sed commands instead of awk ones in this default groups.conf file.

2012-03-18 S. Thiell <stephane.thiell@cea.fr>

	* conf/groups.conf: Fix default source regexp for mawk (ticket #178). 

	* Packaging: Add groups.conf.d directory and sample files.

2012-03-17 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Nodeset.py: Add support for -l[ll] <nodeset(s)> to list belonging
	groups (CLI interface to NodeSet.groups()) (ticket #162).

	* NodeSet: Add groups() public method to list groups nodeset belongs to.

2012-03-15 S. Thiell <stephane.thiell@cea.fr>

	* NodeUtils.py: Add groupsdir option (ticket #179).

2012-03-14 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Nodeset.py: Add --contiguous splitting option (ticket #173).

	* NodeSet.py: Add contiguous() iterator.

	* RangeSet.py: Add contiguous() iterator.

	* RangeSet.py: Allow slice object in fromone() constructor.

2012-02-26 S. Thiell <stephane.thiell@cea.fr>

	* Gateway.py: Improved logging facility, configurable through
	CLUSTERSHELL_GW_LOG_DIR and CLUSTERSHELL_GW_LOG_LEVEL environment
	variables from the root node.

	* Communication.py: Messages are now transfered in xml payload instead of
	'output' attribute for improved handling of multi-lines messages in
	StdOutMessage and StdErrMessage.

2012-02-24 S. Thiell <stephane.thiell@cea.fr>

	* Worker/EngineClient.py: Fix gateway write performance issue, as seen on a
	very large cluster with a no-grooming test case and lots of small messages